--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- Discord -->
     <div style="display: flex; justify-content: center; margin-top: 40px;">
-        <a href="https://discord.com/invite/xjdtGqzuhf" target="_blank" style="
+        <a href="https://discord.com/invite/5ZfSyhEH" target="_blank" style="
     display: inline-flex;
     align-items: center;
     gap: 10px;
@@ -664,6 +664,7 @@ Washington Commanders vs Cincinnati Bengals
 </body>
 
 </html>
+
 
 
 
