--- a/nfl.html
+++ b/nfl.html
@@ -94,16 +94,19 @@
 
 
                 <!-- Matches -->
-<div class="match-box" data-iframe="https://topembed.pw/channel/TSN1[Canada]">
+
+
+
+<div class="match-box" data-iframe="https://topembed.pw/channel/NFLNetwork[USA]">
     <div class="match-header">NFL</div>
     <div class="teams">
-        <img src="https://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/scoreboard/wsh.png&w=40&h=40&scale=crop&cquality=40&location=origin"
+        <img src="https://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/scoreboard/pit.png&w=40&h=40&scale=crop&cquality=40&location=origin"
             alt="logo" />
         <span>
 
-Washington Commanders vs Cincinnati Bengals
+Carolina Panthers vs Pittsburgh Steelers
         </span>
-        <img src="https://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/scoreboard/cin.png&w=40&h=40&scale=crop&cquality=40&location=origin"
+        <img src="https://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/scoreboard/car.png&w=40&h=40&scale=crop&cquality=40&location=origin"
             alt="logo" />
     </div>
     <div class="match-info">
@@ -114,14 +117,60 @@ Washington Commanders vs Cincinnati Bengals
                 <rect x="6" y="12" width="3" height="3" rx="0.5" fill="#ffffff"></rect>
                 <rect x="10.5" y="12" width="3" height="3" rx="0.5" fill="#ffffff"></rect>
                 <rect x="15" y="12" width="3" height="3" rx="0.5" fill="#ffffff"></rect>
-            </svg><span>August 18, 2025</span></div>
+            </svg><span>August 21, 2025</span></div>
+        <div class="time-container"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M12 7V12L14.5 10.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
+                    stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+            </svg><span>07:00 PM ET</span></div>
+    </div>
+</div>
+
+
+
+
+
+
+<div class="match-box" data-iframe="https://topembed.pw/channel/ESPN3[Argentina]">
+    <div class="match-header">NFL</div>
+    <div class="teams">
+        <img src="https://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/scoreboard/ne.png&w=40&h=40&scale=crop&cquality=40&location=origin"
+            alt="logo" />
+        <span>
+
+New York Giants vs New England Patriots
+        </span>
+        <img src="https://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/scoreboard/nyg.png&w=40&h=40&scale=crop&cquality=40&location=origin"
+            alt="logo" />
+    </div>
+    <div class="match-info">
+        <div class="date-container"> <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M20 10V7C20 5.89543 19.1046 5 18 5H6C4.89543 5 4 5.89543 4 7V10M20 10V19C20 20.1046 19.1046 21 18 21H6C4.89543 21 4 20.1046 4 19V10M20 10H4M8 3V7M16 3V7"
+                    stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path>
+                <rect x="6" y="12" width="3" height="3" rx="0.5" fill="#ffffff"></rect>
+                <rect x="10.5" y="12" width="3" height="3" rx="0.5" fill="#ffffff"></rect>
+                <rect x="15" y="12" width="3" height="3" rx="0.5" fill="#ffffff"></rect>
+            </svg><span>August 21, 2025</span></div>
         <div class="time-container"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                     d="M12 7V12L14.5 10.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
                     stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
             </svg><span>08:00 PM ET</span></div>
     </div>
-</div>        <!-- Matches -->
+</div>
+
+
+
+
+
+
+
+
+
+
+                
+<!-- Matches -->
             </div>
         </main>
 
@@ -212,6 +261,7 @@ Washington Commanders vs Cincinnati Bengals
 </body>
 
 </html>
+
 
 
 
