--- a/watch.html
+++ b/watch.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-    <script type='text/javascript'
-        src='//pl18541007.profitableratecpm.com/91/94/0f/91940f84fa379733194239a75eb1cbd0.js'></script>
+    <script type='text/javascript' src='//pl18225233.profitableratecpm.com/62/1e/63/621e63bf6da18651a3013b58396ea42e.js'></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BuffStreams - Free Live Sports Streaming</title>
@@ -78,62 +77,58 @@
 
 
                 <div class="ad-center">
-                    <script type="text/javascript">
-                        atOptions = {
-                            'key': '0917b618562c4a09e453780af8821437',
-                            'format': 'iframe',
-                            'height': 60,
-                            'width': 468,
-                            'params': {}
-                        };
-                    </script>
-                    <script type="text/javascript"
-                        src="//www.highperformanceformat.com/0917b618562c4a09e453780af8821437/invoke.js"></script>
+                   <script type="text/javascript">
+	atOptions = {
+		'key' : '1affd0df5f0aa4ec9c4aac51d7b2276b',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/1affd0df5f0aa4ec9c4aac51d7b2276b/invoke.js"></script>
                 </div>
                 <div class="iframe-container">
                     <iframe id="player" src=""></iframe>
 
                 </div>
                 <div class="ad-center">
-                    <script type="text/javascript">
-                        atOptions = {
-                            'key': '62a694d4a1a8f6f75b744585d414f93c',
-                            'format': 'iframe',
-                            'height': 50,
-                            'width': 320,
-                            'params': {}
-                        };
-                    </script>
-                    <script type="text/javascript"
-                        src="//www.highperformanceformat.com/62a694d4a1a8f6f75b744585d414f93c/invoke.js"></script>
+                   <script type="text/javascript">
+	atOptions = {
+		'key' : '6c8b2e342bc3150b1316c166262197fd',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/6c8b2e342bc3150b1316c166262197fd/invoke.js"></script>
                 </div>
             </section>
             <aside class="sidebar">
                 <div class="ad">
-                    <script type="text/javascript">
-                        atOptions = {
-                            'key': '05f629c84db5ad6e762d2406be4ee48d',
-                            'format': 'iframe',
-                            'height': 250,
-                            'width': 300,
-                            'params': {}
-                        };
-                    </script>
-                    <script type="text/javascript"
-                        src="//www.highperformanceformat.com/05f629c84db5ad6e762d2406be4ee48d/invoke.js"></script>
+                   <script type="text/javascript">
+	atOptions = {
+		'key' : '6367168a6dcbc9d005a65a2770432a28',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/6367168a6dcbc9d005a65a2770432a28/invoke.js"></script>
                 </div>
                 <div class="ad">
-                    <script type="text/javascript">
-                        atOptions = {
-                            'key': 'b145f0a8ad4e19e103be39d5a7fa45be',
-                            'format': 'iframe',
-                            'height': 300,
-                            'width': 160,
-                            'params': {}
-                        };
-                    </script>
-                    <script type="text/javascript"
-                        src="//www.highperformanceformat.com/b145f0a8ad4e19e103be39d5a7fa45be/invoke.js"></script>
+                 <script type="text/javascript">
+	atOptions = {
+		'key' : 'c056290ae6472fcc026e9aa3e4433ff2',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c056290ae6472fcc026e9aa3e4433ff2/invoke.js"></script>
                 </div>
             </aside>
         </div>
@@ -181,5 +176,6 @@
 </body>
 
 </html>
+
 
 
