--- a/cfb.html
+++ b/cfb.html
@@ -13,10 +13,11 @@
 
 
     <!-- header -->
-    <header class="site-header">
+      <header class="site-header">
         <div class="logo">w2.BuffStreams24.sbs</div>
         <nav class="streams-nav">
             <a href="nfl.html">NFL streams</a>
+		    <a href="cfb.html">CFB streams</a>
             <a href="nba.html">NBA streams</a>
             <a href="mlb.html">MLB streams</a>
             <a href="boxing.html">BOXING streams</a>
@@ -185,5 +186,6 @@
 </body>
 
 </html>
+
 
 
