--- a/watch.html
+++ b/watch.html
@@ -11,10 +11,11 @@
 
 <body>
 
-    <header class="site-header">
+      <header class="site-header">
         <div class="logo">w2.BuffStreams24.sbs</div>
         <nav class="streams-nav">
             <a href="nfl.html">NFL streams</a>
+		    <a href="cfb.html">CFB streams</a>
             <a href="nba.html">NBA streams</a>
             <a href="mlb.html">MLB streams</a>
             <a href="boxing.html">BOXING streams</a>
@@ -24,7 +25,6 @@
             <a href="soccer.html">Soccer streams</a>
         </nav>
     </header>
-
 
     <div style="display: flex; justify-content: center; margin-top: 40px;">
         <a href="https://discord.com/invite/5ZfSyhEH" target="_blank" style="
@@ -176,6 +176,7 @@
 </body>
 
 </html>
+
 
 
 
