--- a/cfb.html
+++ b/cfb.html
@@ -94,7 +94,8 @@
 
 
                 <div id="dateBar"
-                    style="width: 100%; background: oklch(0.269 0 0); border: 1px solid #333; color: white; font-size: 24px; text-align: center; padding: 15px 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-weight: bold;  border-radius: 8px;">
+                    style="width: 100%; border: 1px solid #2a3245; 
+  background-color: #1e2430; color: white; font-size: 24px; text-align: center; padding: 15px 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-weight: bold;  border-radius: 8px;">
                     Schudule: 29 Auguest - Day: Friday</div>
 
 
@@ -686,7 +687,8 @@
 
 
                 <div id="dateBar"
-                    style="margin-bottom: -10px; width: 100%; background: oklch(0.269 0 0); border: 1px solid #333; color: white; font-size: 24px; text-align: center; padding: 15px 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-weight: bold;  border-radius: 8px;">
+                    style="margin-bottom: -10px; width: 100%; border: 1px solid #2a3245; 
+  background-color: #1e2430; color: white; font-size: 24px; text-align: center; padding: 15px 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-weight: bold;  border-radius: 8px;">
                     Schudule: 30 Auguest - Day: SaturDay</div>
 
 
@@ -3012,7 +3014,8 @@
 
 
                 <div id="dateBar"
-                    style="margin-bottom: -10px; width: 100%; background: oklch(0.269 0 0); border: 1px solid #333; color: white; font-size: 24px; text-align: center; padding: 15px 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-weight: bold;  border-radius: 8px;">
+                    style="margin-bottom: -10px; width: 100%; border: 1px solid #2a3245; 
+  background-color: #1e2430; color: white; font-size: 24px; text-align: center; padding: 15px 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-weight: bold;  border-radius: 8px;">
                     Schudule: 1 September - Day: Monday</div>
 
 
@@ -3088,7 +3091,8 @@
 
 
                 <div id="dateBar"
-                    style="margin-bottom: -10px; width: 100%; background: oklch(0.269 0 0); border: 1px solid #333; color: white; font-size: 24px; text-align: center; padding: 15px 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-weight: bold;  border-radius: 8px;">
+                    style="margin-bottom: -10px; width: 100%;  border: 1px solid #2a3245; 
+  background-color: #1e2430; color: white; font-size: 24px; text-align: center; padding: 15px 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-weight: bold;  border-radius: 8px;">
                     Schudule: 2 September - Day: Tuesday</div>
 
 
@@ -3133,7 +3137,8 @@
 
 
                 <div id="dateBar"
-                    style="margin-bottom: -10px; width: 100%; background: oklch(0.269 0 0); border: 1px solid #333; color: white; font-size: 24px; text-align: center; padding: 15px 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-weight: bold;  border-radius: 8px;">
+                    style="margin-bottom: -10px; width: 100%; border: 1px solid #2a3245; 
+  background-color: #1e2430; color: white; font-size: 24px; text-align: center; padding: 15px 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-weight: bold;  border-radius: 8px;">
                     Schudule: 6 September - Day: Saturday</div>
 
 
@@ -5894,6 +5899,3 @@
 </body>
 
 </html>
-
-
-
