--- a/cfb.html
+++ b/cfb.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BuffStreams | BOXING</title>
+    <title>BuffStreams | CFB</title>
     <link rel="stylesheet" href="output.css">
 </head>
 
@@ -240,6 +240,7 @@
 </body>
 
 </html>
+
 
 
 
