--- a/cfb.html
+++ b/cfb.html
@@ -31,7 +31,7 @@
 
     <!-- Discord -->
     <div style="display: flex; justify-content: center; margin-top: 40px;">
-        <a href="https://discord.com/invite/5ZfSyhEH" target="_blank" style="
+        <a href="https://discord.com/invite/FwFdvBu6" target="_blank" style="
     display: inline-flex;
     align-items: center;
     gap: 10px;
@@ -240,6 +240,7 @@
 </body>
 
 </html>
+
 
 
 
