--- a/mlb.html
+++ b/mlb.html
@@ -31,7 +31,7 @@
 
     <!-- Discord -->
     <div style="display: flex; justify-content: center; margin-top: 40px;">
-        <a href="https://discord.com/invite/FwFdvBu6" target="_blank" style="
+        <a href="https://discord.com/invite/nbyQnTqN" target="_blank" style="
     display: inline-flex;
     align-items: center;
     gap: 10px;
@@ -530,6 +530,7 @@
 </body>
 
 </html>
+
 
 
 
