--- a/nba.html
+++ b/nba.html
@@ -31,7 +31,7 @@
 
     <!-- Discord -->
     <div style="display: flex; justify-content: center; margin-top: 40px;">
-        <a href="https://discord.com/invite/FwFdvBu6" target="_blank" style="
+        <a href="https://discord.com/invite/nbyQnTqN" target="_blank" style="
     display: inline-flex;
     align-items: center;
     gap: 10px;
@@ -250,6 +250,7 @@ https <div class='match-box' data-iframe='https://castweb.xyz/player1.php?hd=704
 </body>
 
 </html>
+
 
 
 
