--- a/nba.html
+++ b/nba.html
@@ -116,7 +116,7 @@
             </svg><span>07:30 PM ET</span></div>
     </div>
 </div>
-https <div class='match-box' data-iframe='https://castweb.xyz/player1.php?hd=704'>
+ <div class='match-box' data-iframe='https://castweb.xyz/player1.php?hd=704'>
     <div class='match-header'>WNBA</div>
     <div class='teams'><img src='https://a.espncdn.com/i/teamlogos/wnba/500/ind.png' alt='logo' /><span>Indiana Fever vs
             Chicago Sky</span><img src='https://a.espncdn.com/i/teamlogos/wnba/500/chi.png' alt='logo' /></div>
@@ -250,6 +250,7 @@ https <div class='match-box' data-iframe='https://castweb.xyz/player1.php?hd=704
 </body>
 
 </html>
+
 
 
 
